--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>React</title>
+  <title>uTodo</title>
   
   <style>
     * {
@@ -52,6 +52,10 @@
     }
     
   </style>
+
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
+
   
   <!-- React -->
   <script src="../node_modules/systemjs/system.js"></script>
