--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,11 @@
 <script>eruda.init();</script>
 
   
-  <!-- React -->
-  <script src="../node_modules/systemjs/system.js"></script>
-  
+  <!-- dev -->
+  <!-- <script src="../node_modules/systemjs/system.js"></script>
+  -->
+    <script src="https://unpkg.com/systemjs@0.19.47/dist/system.js"></script>
+
 </head>
 
 <body>
