package.js in public

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,6 @@
     </div>
   </div>
   <!-- Project -->
-  <script src="../package.js"></script>
+  <script src="package.js"></script>
 </body>
 </html>
