--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 
   
   <!-- dev -->
-  <!-- <script src="../node_modules/systemjs/system.js"></script>
-  -->
-    <script src="https://unpkg.com/systemjs@0.19.47/dist/system.js"></script>
+  <script src="node_modules/systemjs/system.js"></script>
+  <!--  <script src="https://unpkg.com/systemjs@0.19.47/dist/system.js"></script> -->
 
 </head>
 
